--- a/pyproject.toml
+++ b/pyproject.toml
@@ -120,6 +120,7 @@ ignore = [
   "E741",        # Ambiguous variable name
   "E501",        # Line too long
   "PLR2004",     # Magic value used in comparison
+  "PLR0915",     # Too many statements
 ]
 line-length = 100
 exclude = []
