--- a/.github/workflows/test_on_push.yml
+++ b/.github/workflows/test_on_push.yml
@@ -1,13 +1,11 @@
-name: Scheduled tests
-on:
-    workflow_dispatch:
-    push:
-      branches:
-        - main
+name: Test project on push
 
-    # Run every day at 3 am UTC
-    schedule:
-      - cron: "0 3 * * *"
+on:
+  workflow_dispatch:
+  pull_request:
+  push:
+    branches:
+    - main
 
 jobs:
   style:
